--- a/questions_template/index.html
+++ b/questions_template/index.html
@@ -10,6 +10,10 @@
 
     <title>Test Questions Template</title>
 
+    <!-- jQuery to handle the draggables and movables -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,6 +21,21 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <script src="bootstrap-checkbox-1.5.0/dist/js/bootstrap-checkbox.js" defer></script>
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+      <style>
+        #sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+        #sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
+        #sortable li span { position: absolute; margin-left: -1.3em; }
+      </style>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script>
+        $( function() {
+          $( "#sortable" ).sortable();
+          $( "#sortable" ).disableSelection();
+        } );
+      </script>
   </head>
   <script>
     $(':checkbox').checkboxpicker();
@@ -44,6 +63,7 @@
   dragItem3 = document.getElementById("answer3");
   dragItem4 = document.getElementById("answer4");
 
+
 //This is the event that changes it when mouse is over
 dragItem.addEventListener("mouseover", HandleStart);
 
@@ -66,6 +86,8 @@ function HandleEnd(e) {
     e.target.innerHTML = temp; //Reverts to original
 }
 </script>
+
+
 
   <body id="page-top">
 
@@ -193,20 +215,16 @@ function HandleEnd(e) {
           <div class="col-lg-8 mx-auto">
             <div class="form-group">
                 <p class="lead">Question: Ranking (drag and drop, still working on it...)</p>
-                <div class="answer_choices" style="float: left;">
-                  <p id="answer" ondragstart="drag(event)" draggable="true">Answer</p>
-                  <p id="answer" ondragstart="drag(event)" draggable="true">Answer</p>
-                  <p id="answer" ondragstart="drag(event)" draggable="true">Answer</p>
-                  <p id="answer" ondragstart="drag(event)" draggable="true">Answer</p>
-                </div>
-                <div class="ranking_choices" style="float: right;">
-                  <div ondrop="drop(event)" ondragover="allowDrop(event)" style="width:80px;height:30px;border:1px solid #000;"></div>
-                  <br>
-                  <div ondrop="drop(event)" ondragover="allowDrop(event)" style="width:80px;height:30px;border:1px solid #000;"></div>
-                  <br>
-                  <div ondrop="drop(event)" ondragover="allowDrop(event)" style="width:80px;height:30px;border:1px solid #000;"></div>
-                  <br>
-                  <div ondrop="drop(event)" ondragover="allowDrop(event)" style="width:80px;height:30px;border:1px solid #000;"></div>
+                <div class="ranking_choices" style="float: left;">
+                  <ul id="sortable">
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 1</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 2</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 3</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 4</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 5</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 6</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Answer 7</li>
+                  </ul>
                 </div>
               </div>
             </div>
